update VADM case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -36,13 +36,15 @@ practices:
   - Design system
   - Responsive web design
   - Agile development
-  - DevOps
+  - DevSecOps
   - Open-source development
   - Cloud hosting
 news_posts:
+  - title: VA innovators see home-grown ideas spread far and wide across veterans health network
+    url: https://federalnewsnetwork.com/veterans-affairs/2019/10/va-innovators-see-home-grown-ideas-spread-far-and-wide-across-veterans-health-network/
 project_url:
 project_cta:
-source_code_url:
+source_code_url: https://github.com/agilesix/diffusion-marketplace
 ---
 
 {% capture summary %}
@@ -90,9 +92,9 @@ source_code_url:
   </p>
 
   <p>
-    After our primary design solution is validated, the current plan is to
-    scale the number of practices showcased, and to continue to iterate on the
-    development of other key features.
+    After validating our primary design solution through extensive user research,
+    we rapidly iterated toward the release of beta and production versions of the
+    platform &mdash; with an initial collection of over 50 practices.
   </p>
 {% endcapture %}
 
@@ -103,7 +105,19 @@ source_code_url:
     </li>
 
     <li>
-      Currently iterating toward a beta version
+      Launched a beta version with a small user base in the summer of 2019
+    </li>
+
+    <li>
+      Announced the platform to wider VHA audience in October 2019
+    </li>
+
+    <li>
+      Launched a production version in early 2020, with over 50 practices
+    </li>
+
+    <li>
+      Currently continuously improving the platform with plans to add hundreds of more practices
     </li>
   </ul>
 {% endcapture %}
