--- a/pages/services.html
+++ b/pages/services.html
@@ -40,7 +40,7 @@ redirect_from:
         <h3>How we've helped others:</h3>
         <ul>
           <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
-          <li>Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</li>
+          <li><a href="/work/experience/va-diffusion-marketplace/">Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</a></li>
           <li>Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</li>
         </ul>
       </div>
@@ -72,9 +72,9 @@ redirect_from:
       <div class="col-sm-6">
         <h3>How we've helped others:</h3>
         <ul>
-          <li>Made procurements more agile at all levels of government</li>
-          <li>Streamlined how multiple agencies procure software</li>
-          <li>Embedded technical brains to de-risk a critical software acquisition for the U.S. Department of Labor</li>
+          <li><a href="/work/experience/agile-acquisition-framework/">Made procurements more agile at all levels of government</a></li>
+          <li><a href="/work/experience/agile-delivery-services-marketplace/">Streamlined how multiple agencies procure software</a></li>
+          <li><a href="/work/experience/dol-legacy-system-modernization/">Embedded technical brains to de-risk a critical software acquisition for the U.S. Department of Labor</a></li>
         </ul>
       </div>
     </div>
@@ -105,7 +105,7 @@ redirect_from:
         <ul>
           <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
           <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
-          <li>Accelerated the Transportation Security Administration's adoption of the cloud</li>
+          <li><a href="">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
         </ul>
       </div>
     </div>
@@ -134,9 +134,9 @@ redirect_from:
       <div class="col-sm-6">
         <h3>How we've helped others:</h3>
         <ul>
-          <li>Strategized a better mobile user experience for users of VA.gov</li>
-          <li>Prototyped an API governance tool for the Veterans Affairs</li>
-          <li>Advised the Environment Protection Agency on how to proceed with a critical system </li>
+          <li><a href="/work/experience/va-mobile-product-strategy/">Strategized a better mobile user experience for users of VA.gov</a></li>
+          <li><a href="/work/experience/va-api-scorecard-mvp/">Prototyped an API governance tool for the Veterans Affairs</a></li>
+          <li>Advised the Environment Protection Agency on how to proceed with an ailing system</li>
         </ul>
       </div>
     </div>
