--- a/pages/talks.html
+++ b/pages/talks.html
@@ -17,6 +17,12 @@ permalink: /thoughts/talks/
       </div>
       <h3 class="h4 mt-3">Agile in a Legacy Environment</h3>
     </div>
+    <div class="col-sm-6 d-flex flex-column align-items-stretch">
+      <div class=" embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/ObzUL1d58eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <h3 class="h4 mt-3">Modernizing Gov IT Through Share in Savings Contracts</h3>
+    </div>
     <div class="col-sm-6 mt-5 mt-sm-0 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lQREvCGELq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
