--- a/pages/experience.html
+++ b/pages/experience.html
@@ -68,28 +68,6 @@ pagination:
   {% unless context == 'related' %}</div>{% endunless %}
 </div>
 
-{% if paginator.total_pages > 1 %}
-<div class="projects">
-  <div class="mt-5 mt-md-0 d-flex flex-row justify-content-center">
-    <div class="">
-    {% if paginator.previous_page %}
-      <a class="" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
-        <i class="fa fa-chevron-left mr-2 pagination-icon"></i><b>Previous</b>
-      </a>
-    {% endif %}
-    </div>
-    <div class="mx-5">
-      <p class="d-inline-block">Page {{ paginator.page }} of {{ paginator.total_pages }}</p>
-    </div>
-    <div class="">
-    {% if paginator.next_page %}
-      <a class="" href="{{ paginator.next_page_path | prepend: site.baseurl }}">
-        <b>Next</b><i class="fa fa-chevron-right ml-2 pagination-icon"></i>
-      </a>
-    {% endif %}
-    </div>
-  </div>
-</div>
-{% endif %}
+{% include pagination.html %}
 
 {% include hire_us_cta.html %}
