Add services banner img

--- a/pages/services.html
+++ b/pages/services.html
@@ -13,6 +13,7 @@ redirect_from:
 {% include hero_banner.html
   hero_content = 'A lot goes into making you a digital-first agency.'
   color = 'blue'
+  image = 'hero-services.svg'
 %}
 
 <div class="">
