--- a/pages/services.html
+++ b/pages/services.html
@@ -28,10 +28,10 @@ redirect_from:
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 text">
       <div class="col-sm-6">
         <h3>Ways we can help you:</h3>
-        <ul class="text">
+        <ul class="">
           <li>Create a product that your users love</li>
           <li>De-risk the modernization of your legacy systems</li>
           <li>Make your data open and accessible to the public</li>
@@ -61,7 +61,7 @@ redirect_from:
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 text">
       <div class="col-sm-6">
         <h3>Ways we can help you:</h3>
         <ul>
@@ -92,7 +92,7 @@ redirect_from:
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 text">
       <div class="col-sm-6">
         <h3>Ways we can help you:</h3>
         <ul>
@@ -123,7 +123,7 @@ redirect_from:
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 text">
       <div class="col-sm-6">
         <h3>Ways we can help you:</h3>
         <ul>
@@ -150,7 +150,7 @@ redirect_from:
     <p>TBD</p>
     <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Learn more</a>
 
-    <div class="row mt-5">
+    <div class="row mt-5 text">
       <div class="col-sm-6">
         <h3>Ways we can help you:</h3>
         <ul>
