--- a/pages/join.html
+++ b/pages/join.html
@@ -44,7 +44,7 @@ hero_content: Help us change the way government works.
         <h3>You matter</h3>
         <p>
           It's people like you &mdash; with talents in research, design, product, engineering, data, and more &mdash;
-          who make a difference. We've created an environment that empowers you to unleash your skills
+          who can make a difference. We've created an environment that empowers you to unleash your skills
           for public good, whether that's improving early childhood outcomes or <a href="/work/experience/va-diffusion-marketplace/">helping to save veteran lives</a>.
           You'll work alongside a team of <a href="/company/about/#meet-the-team">a team of extraordinarily-talented people</a>
           who strive to bring out the best in you and each other. You'll also be taken care of with a
