--- a/pages/services.html
+++ b/pages/services.html
@@ -119,7 +119,7 @@ redirect_from:
       <div class="col-sm-6">
         <h2>Microconsulting</h2>
         <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Engage now</a>
       </div>
     </div>
 
@@ -148,7 +148,7 @@ redirect_from:
   <div class="container prose">
     <h2>Training</h2>
     <p>TBD</p>
-    <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Learn more</a>
+    <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Level up</a>
 
     <div class="row mt-5 text">
       <div class="col-sm-6">
