add some news coverage of VADM

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -42,6 +42,8 @@ practices:
 news_posts:
   - title: VA innovators see home-grown ideas spread far and wide across veterans health network
     url: https://federalnewsnetwork.com/veterans-affairs/2019/10/va-innovators-see-home-grown-ideas-spread-far-and-wide-across-veterans-health-network/
+  - title: FedHealthIT 2020 Innovation Award Winners Announced
+    url: https://www.fedhealthit.com/2020/02/fedhealthit-2020-innovation-award-winners-announced/
 project_url:
 project_cta:
 source_code_url: https://github.com/agilesix/diffusion-marketplace
