Add styled list style

--- a/pages/services.html
+++ b/pages/services.html
@@ -16,159 +16,160 @@ redirect_from:
   image = 'hero-services.svg'
 %}
 
-<div class="">
-  <div class="container prose">
-    <div class="row">
-      <div class="col-sm-6">
-        <h2>Service Delivery</h2>
-        <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> We specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Delight your users</a>
+<div class="services-content left-justified-list">
+  <div class="">
+    <div class="container prose">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Service Delivery</h2>
+          <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> We specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Delight your users</a>
+        </div>
+        <div class="col-sm-6">
+        </div>
       </div>
-      <div class="col-sm-6">
+
+      <div class="row mt-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul class="">
+            <li>Create a product that your users love</li>
+            <li>De-risk the modernization of your legacy systems</li>
+            <li>Make your data open and accessible to the public</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h3>How we've helped others:</h3>
+          <ul>
+            <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
+            <li><a href="/work/experience/va-diffusion-marketplace/">Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</a></li>
+            <li>Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</li>
+          </ul>
+        </div>
       </div>
     </div>
+  </div>
 
-    <div class="row mt-5 text">
-      <div class="col-sm-6">
-        <h3>Ways we can help you:</h3>
-        <ul class="">
-          <li>Create a product that your users love</li>
-          <li>De-risk the modernization of your legacy systems</li>
-          <li>Make your data open and accessible to the public</li>
-        </ul>
+  <div class="mt-5 bg-gray-light py-5">
+    <div class="container prose">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Procurement</h2>
+          <p><b>To support digital progress, procurement must change.</b> We combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Buy better</a>
+        </div>
+        <div class="col-sm-6">
+        </div>
       </div>
-      <div class="col-sm-6">
-        <h3>How we've helped others:</h3>
-        <ul>
-          <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
-          <li><a href="/work/experience/va-diffusion-marketplace/">Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</a></li>
-          <li>Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</li>
-        </ul>
+
+      <div class="row mt-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul>
+            <li>Transition you to the world of modern procurement</li>
+            <li>Transform how you engage with technology vendors</li>
+            <li>Propel the performance of your contractor teams</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h3>How we've helped others:</h3>
+          <ul>
+            <li><a href="/work/experience/agile-acquisition-framework/">Made procurements more agile at all levels of government</a></li>
+            <li><a href="/work/experience/agile-delivery-services-marketplace/">Streamlined how multiple agencies procure software</a></li>
+            <li><a href="/work/experience/dol-legacy-system-modernization/">Embedded technical brains to de-risk a critical software acquisition for the U.S. Department of Labor</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <div class="container prose">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Transformation</h2>
+          <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Transform now</a>
+        </div>
+      </div>
+
+      <div class="row mt-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul>
+            <li>Jumpstart your journey to becoming a digital-first agency</li>
+            <li>Institute digital ways of thinking and working at all levels</li>
+            <li>Increase your digital talent density</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h3>How we've helped others:</h3>
+          <ul>
+            <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
+            <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
+            <li><a href="">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5 bg-gray-light py-5">
+    <div class="container prose">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Microconsulting</h2>
+          <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Engage now</a>
+        </div>
+      </div>
+
+      <div class="row mt-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul>
+            <li>Provide expert advice on a specific topic</li>
+            <li>Rapidly prototype an idea to facilitate strategic decision-making</li>
+            <li>Identify high-impact opportunities to improve the health of your project</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h3>How we've helped others:</h3>
+          <ul>
+            <li><a href="/work/experience/va-mobile-product-strategy/">Strategized a better mobile user experience for users of VA.gov</a></li>
+            <li><a href="/work/experience/va-api-scorecard-mvp/">Prototyped an API governance tool for the Veterans Affairs</a></li>
+            <li>Advised the Environment Protection Agency on how to proceed with an ailing system</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <div class="container prose">
+      <h2>Training</h2>
+      <p>TBD</p>
+      <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Level up</a>
+
+      <div class="row mt-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul>
+            <li>TBD</li>
+            <li>TBD</li>
+            <li>TBD</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <h3>How we've helped others:</h3>
+          <ul>
+            <li>TBD</li>
+            <li>TBD</li>
+            <li>TBD</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-<div class="mt-5 bg-gray-light py-5">
-  <div class="container prose">
-    <div class="row">
-      <div class="col-sm-6">
-        <h2>Procurement</h2>
-        <p><b>To support digital progress, procurement must change.</b> We combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Buy better</a>
-      </div>
-      <div class="col-sm-6">
-      </div>
-    </div>
-
-    <div class="row mt-5 text">
-      <div class="col-sm-6">
-        <h3>Ways we can help you:</h3>
-        <ul>
-          <li>Transition you to the world of modern procurement</li>
-          <li>Transform how you engage with technology vendors</li>
-          <li>Propel the performance of your contractor teams</li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-        <h3>How we've helped others:</h3>
-        <ul>
-          <li><a href="/work/experience/agile-acquisition-framework/">Made procurements more agile at all levels of government</a></li>
-          <li><a href="/work/experience/agile-delivery-services-marketplace/">Streamlined how multiple agencies procure software</a></li>
-          <li><a href="/work/experience/dol-legacy-system-modernization/">Embedded technical brains to de-risk a critical software acquisition for the U.S. Department of Labor</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="mt-5">
-  <div class="container prose">
-    <div class="row">
-      <div class="col-sm-6">
-        <h2>Transformation</h2>
-        <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Transform now</a>
-      </div>
-    </div>
-
-    <div class="row mt-5 text">
-      <div class="col-sm-6">
-        <h3>Ways we can help you:</h3>
-        <ul>
-          <li>Jumpstart your journey to becoming a digital-first agency</li>
-          <li>Institute digital ways of thinking and working at all levels</li>
-          <li>Increase your digital talent density</li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-        <h3>How we've helped others:</h3>
-        <ul>
-          <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
-          <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
-          <li><a href="">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="mt-5 bg-gray-light py-5">
-  <div class="container prose">
-    <div class="row">
-      <div class="col-sm-6">
-        <h2>Microconsulting</h2>
-        <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Engage now</a>
-      </div>
-    </div>
-
-    <div class="row mt-5 text">
-      <div class="col-sm-6">
-        <h3>Ways we can help you:</h3>
-        <ul>
-          <li>Provide expert advice on a specific topic</li>
-          <li>Rapidly prototype an idea to facilitate strategic decision-making</li>
-          <li>Identify high-impact opportunities to improve the health of your project</li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-        <h3>How we've helped others:</h3>
-        <ul>
-          <li><a href="/work/experience/va-mobile-product-strategy/">Strategized a better mobile user experience for users of VA.gov</a></li>
-          <li><a href="/work/experience/va-api-scorecard-mvp/">Prototyped an API governance tool for the Veterans Affairs</a></li>
-          <li>Advised the Environment Protection Agency on how to proceed with an ailing system</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="mt-5">
-  <div class="container prose">
-    <h2>Training</h2>
-    <p>TBD</p>
-    <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Level up</a>
-
-    <div class="row mt-5 text">
-      <div class="col-sm-6">
-        <h3>Ways we can help you:</h3>
-        <ul>
-          <li>TBD</li>
-          <li>TBD</li>
-          <li>TBD</li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-        <h3>How we've helped others:</h3>
-        <ul>
-          <li>TBD</li>
-          <li>TBD</li>
-          <li>TBD</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
 {% include hire_us_cta.html %}
