--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -10,7 +10,7 @@ permalink: /connect/contracting/
   text = "dark"
 %}
 
-<div class="container container-md text prose left-justified-list">
+<div class="container container-md text prose left-justified-list left-justified-list-compact">
   <h2>Pioneers and leaders</h2>
   <ul>
     <li>Named by G2Xchange as one of the <a href="https://fetch.g2xmedia.io/2020-nxt-up/">top vendors to work with in 2020</a></li>
