update paths and redirects

--- a/_service_areas/ditap.html
+++ b/_service_areas/ditap.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: "Digital IT Acquisition Professional (DITAP) Training"
-permalink: /work/services/ditap/
+permalink: /work/services/training/ditap/
+redirect_from:
+  - /services/ditap/
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
@@ -177,25 +179,6 @@ class_2_spots:
       </div>
 
       <h2 id="tuition-and-dates">Tuition and dates</h2>
-      <a href="/work/services/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
-        <div class="col-12">
-          <h3 class="class-heading">March 4, 2020 to August 27, 2020</h3>
-          {% if page.class_2_spots %}
-            <div class="class-spots">
-              <span>{{ page.class_2_spots }} spots left</span>
-            </div>
-          {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 4&ndash;6, May 11&ndash;15, July 6&ndash;10, and Aug 24&ndash;27.</p>
-          <div class="tuition-card-meta mt-3">
-            <p><strong>Location:</strong> Online + Washington DC</p>
-            <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
-            <p><strong>Cost:</strong> $7,500 USD</p>
-          </div>
-          <p class="mt-2">
-            <strong class="tuition-card-link">Apply now →</strong>
-          </p>
-        </div>
-      </a>
       <a href="/work/services/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
           <h3 class="class-heading">August 5, 2020 to February 11, 2021</h3>
