--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: Submit Your Application
-permalink: /work/services/ditap/apply/
+permalink: /work/services/training/ditap/apply/
+redirect_from:
+  - /services/ditap/apply/
 ---
 
 {% include hero_banner.html
@@ -45,8 +47,7 @@ permalink: /work/services/ditap/apply/
         <label class="required" for="date-input">What course date would you like to take?</label>
         <select class="form-control" id="date-input" name="date" required>
           <option value>- Select -</option>
-          <option value="1">March 4, 2020 to August 27, 2020</option>
-          <option value="2">August 5, 2020 to February 11, 2021</option>
+          <option value="1">August 5, 2020 to February 11, 2021</option>
         </select>
       </div>
 
