fixes, folder change

--- a/pages/training.html
+++ b/pages/training.html
@@ -13,7 +13,7 @@ permalink: /work/services/training/
   <h2>Digital Acquisition Training for Executives </h2>
   <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
   <h2>Digital IT Acquisition Professional (DITAP) Training</h2>
-  <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/ditap/">Learn more</a>
+  <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
 </div>
 
 {% include get_expert_answers_cta.html %}
