Add subcontractor tag to contracting page

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -61,10 +61,10 @@ permalink: /connect/contracting/
     <li>GSA IT Schedule 70 (47QTCA18D00D0) &ndash; accessible to all federal, state, and local governments</li>
     <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &ndash; eligible for sole-source contracts</li>
     <li>U.S. Air Force SBIR Phase II (FA864919CA079) &ndash; eligible for sole-source contracts and accessible to any federal agency</li>
-    <li>California Agile Vendor Pool <i>sub</i></li>
-    <li>DHS Services for Enabling Agile Delivery (SEAD) <i>sub</i></li>
-    <li>CMS Enterprise Agile Transformation Services (EATS) <i>sub</i></li>
-    <li>CMS Medicare Payment Systems Modernization (MPSM) <i>sub</i></li>
+    <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
+    <li>DHS Services for Enabling Agile Delivery (SEAD)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
+    <li>CMS Enterprise Agile Transformation Services (EATS)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
+    <li>CMS Medicare Payment Systems Modernization (MPSM)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
   </ul>
 
   <h2>Company data</h2>
