--- a/pages/experience.html
+++ b/pages/experience.html
@@ -10,6 +10,7 @@ redirect_from:
   - /work/team-member/john-teeter/
 pagination:
   enabled: true
+  per_page: 10000
   collection: projects
   sort_field: 'order'
   sort_reverse: false
@@ -48,7 +49,7 @@ pagination:
   <div class="projects">
     <div class="projects-row">
       {% for item in paginator.posts %}
-        <article class="project-col">
+        <article class="project-col" data-tags="{{item.tags | join}}">
           <div class="project-card card-link" data-href="{{item.permalink}}" tabindex="-1">
             <div role="img" class="project-img" style="background-image: url({{item.image}});" title="{{item.image_description}}"></div>
             <div class="project-block">
