initial content for training service

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -2,9 +2,9 @@
 layout: default
 title_tag: 18F Consulting
 title: Helping agencies achieve digital mastery
+permalink: /work/experience/18f-consulting/
 redirect_from:
   - /work/18f-consulting/
-permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/digital-mastery.svg
 image_description: Quartet playing instruments with digital symbols coming off as sound waves.
 feature_image:
