--- a/pages/services.html
+++ b/pages/services.html
@@ -147,25 +147,29 @@ redirect_from:
 
   <div class="mt-5">
     <div class="container prose">
-      <h2>Training</h2>
-      <p>TBD</p>
-      <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Level up</a>
+      <div class="row">
+        <div class="col-sm-6">
+          <h2>Training</h2>
+          <p><b>Get the skills you need to make your digital transformation a success.</b> Regardless of mission, all government agencies are now technology organizations. We offer a variety of training options to help you develop and grow your digital skills.</p>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Level up</a>
+        </div>
+      </div>
 
       <div class="row mt-5 text">
         <div class="col-sm-6">
           <h3>Ways we can help you:</h3>
           <ul>
-            <li>TBD</li>
-            <li>TBD</li>
-            <li>TBD</li>
+            <li>Become a federally-certified digital acquisition professional</li>
+            <li>Learn how to apply modern practices, such as agile, to problems that matter</li>
+            <li>Transform your internal talent into design and engineering practitioners</li>
           </ul>
         </div>
         <div class="col-sm-6">
           <h3>How we've helped others:</h3>
           <ul>
-            <li>TBD</li>
-            <li>TBD</li>
-            <li>TBD</li>
+            <li><a href="/work/experience/digital-acquisition-accelerator/">Accelerated the development of digital acquisition professionals for multiple agencies</a></li>
+            <li>Trained the California Health and Human Services Agency on agile methods</li>
+            <li>Grew U.S. Air Force personnel into skilled designers and engineers</li>
           </ul>
         </div>
       </div>
