Update ditap sidenav alignment

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -34,7 +34,7 @@ class_2_spots:
   <div class="row">
     <div class="sidenav col-12 col-md-3 mt-5 d-none d-md-block">
       <div class="is-sticky">
-        <nav class="subnav-col px-0" id="sidenav">
+        <nav class="subnav-col" id="sidenav">
           <ul role="presentation">
             <li><a class="nav-link" href="#overview">Overview</a></li>
             <li><a class="nav-link" href="#learning-experience">Learning experience</a></li>
