Update banner imgs

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ redirect_from: /about/
 {% include hero_banner.html
   hero_title = 'We&apos;re Skylight!'
   hero_content = 'Our mission is to make government work in a digital world.'
-  image = 'hero-about.svg'
+  image = 'hero-about-us.svg'
 %}
 
 <div class="about-us">
