--- a/pages/culture.html
+++ b/pages/culture.html
@@ -7,6 +7,7 @@ redirect_from: /culture/
 
 {% include hero_banner.html
   hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
+  image = 'hero-culture.svg'
 %}
 
 <div class="our-culture">
