Add banners to culture, join, and contracting pages

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -8,6 +8,7 @@ permalink: /connect/contracting/
   hero_content = 'Learn more about why and how to contract with us.'
   color = "yellow"
   text = "dark"
+  image = 'hero-contracting.svg'
 %}
 
 <div class="container container-md text prose left-justified-list left-justified-list-compact">
