--- a/pages/join.html
+++ b/pages/join.html
@@ -9,6 +9,7 @@ hero_content: Help us change the way government works.
 {% include hero_banner.html
   hero_content = "Help us change the way government works."
   color = "green"
+  image = 'hero-join-us.svg'
 %}
 
 <div class="container">
