Add banner img to contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,7 @@ redirect_from:
   image = ""
   color = "yellow"
   text = "dark"
+  image = 'hero-contact-us.svg'
 %}
 
 <div class="contact-us text">
