Update talks page to red banner

--- a/pages/talks.html
+++ b/pages/talks.html
@@ -6,6 +6,7 @@ permalink: /thoughts/talks/
 
 {% include hero_banner.html
   hero_content = 'Our spoken thoughts on design, technology, and more.'
+  color = 'red'
 %}
 
 <div class="container">
