Add new banner images

--- a/pages/press.html
+++ b/pages/press.html
@@ -12,6 +12,7 @@ pagination:
 
 {% include hero_banner.html
   hero_content = 'Skylight in the news.'
+  image = 'hero-press.svg'
 %}
 
 <div class="container container-md text">
