--- a/pages/talks.html
+++ b/pages/talks.html
@@ -7,6 +7,7 @@ permalink: /thoughts/talks/
 {% include hero_banner.html
   hero_content = 'Our spoken thoughts on design, technology, and more.'
   color = 'red'
+  image = 'hero-talks.svg'
 %}
 
 <div class="container">
