--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -7,6 +7,7 @@ permalink: /work/toolkits/
 {% include hero_banner.html
   hero_content = 'Good work requires good tools.'
   color = 'blue'
+  image = 'hero-toolkits.svg'
 %}
 
 <div class="container container-lg text">
