--- a/pages/training.html
+++ b/pages/training.html
@@ -7,6 +7,7 @@ permalink: /work/services/training/
 {% include hero_banner.html
   hero_content = 'Training tagline'
   color = 'blue'
+  image = 'hero-training.svg'
 %}
 
 <div class="container container-lg prose">
