--- a/pages/services.html
+++ b/pages/services.html
@@ -151,7 +151,7 @@ redirect_from:
         <div class="col-sm-6">
           <h2>Training</h2>
           <p><b>Get the skills you need to make your digital transformation a success.</b> Regardless of mission, all government agencies are now technology organizations. We offer a variety of training options to help you develop and grow your digital skills.</p>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Level up</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/">Level up</a>
         </div>
       </div>
 
