--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -11,12 +11,17 @@ class_1_spots:
 class_2_spots:
 ---
 
-<div class="hero">
+<div class="hero bg-blue"
+    style="
+      background-image: url(/img/hero-training-single.svg);
+      background-repeat: no-repeat;
+      background-size: cover;"
+>
   <div class="hero-container container-fluid">
     <div class="row">
       <div class="col-12 col-sm-10 offset-sm-1 col-lg-8 offset-lg-2">
-        <h1 class="hero-heading">Digital IT Acquisition Professional (DITAP) Training</h1>
-        <p class="hero-content">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services and up to 80 Continuous Learning Points.</p>
+        <h1 class="hero-heading text-shadow">Digital IT Acquisition Professional (DITAP) Training</h1>
+        <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services and up to 80 Continuous Learning Points.</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
             <a class="btn btn-warning text-dark mr-2 mt-md-3" href="/work/services/training/ditap/apply">Apply now →</a>
