Update services cta links

--- a/pages/services.html
+++ b/pages/services.html
@@ -8,6 +8,7 @@ redirect_from:
   - /services/digital-transformation/
   - /services/microconsulting/
   - /services/microconsulting/apis/
+cta: /connect/contact/
 ---
 
 {% include hero_banner.html
@@ -23,7 +24,7 @@ redirect_from:
         <div class="col-sm-6">
           <h2>Service Delivery</h2>
           <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> We specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Delight your users</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
         <div class="col-sm-6">
         </div>
@@ -56,7 +57,7 @@ redirect_from:
         <div class="col-sm-6">
           <h2>Procurement</h2>
           <p><b>To support digital progress, procurement must change.</b> We combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Buy better</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Buy better</a>
         </div>
         <div class="col-sm-6">
         </div>
@@ -89,7 +90,7 @@ redirect_from:
         <div class="col-sm-6">
           <h2>Transformation</h2>
           <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Transform now</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Transform now</a>
         </div>
       </div>
 
@@ -120,7 +121,7 @@ redirect_from:
         <div class="col-sm-6">
           <h2>Microconsulting</h2>
           <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Engage now</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
       </div>
 
