Add prose class

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -10,7 +10,7 @@ permalink: /work/toolkits/
   image = 'hero-toolkits.svg'
 %}
 
-<div class="container container-lg text">
+<div class="container container-lg text prose">
   <p>
     Here are some of the tools and resources that we use at Skylight to help us and our
     clients deliver better public services. These toolkits are always being iterated on
