Add hero banner fade-in animation

--- a/pages/culture.html
+++ b/pages/culture.html
@@ -7,6 +7,7 @@ redirect_from: /culture/
 
 {% include hero_banner.html
   hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
+  color = 'dark-blue'
   image = 'hero-culture.svg'
 %}
 
