--- a/pages/press.html
+++ b/pages/press.html
@@ -12,6 +12,7 @@ pagination:
 
 {% include hero_banner.html
   hero_content = 'Skylight in the news.'
+  color = 'dark-blue'
   image = 'hero-press.svg'
 %}
 
