--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ redirect_from: /about/
 {% include hero_banner.html
   hero_title = 'We&apos;re Skylight!'
   hero_content = 'Our mission is to make government work in a digital world.'
-  color = 'dark-blue'
+  color = 'primary'
   image = 'hero-about-us.svg'
 %}
 
