--- a/pages/culture.html
+++ b/pages/culture.html
@@ -3,6 +3,7 @@ layout: default
 title: Our Culture
 permalink: /company/culture/
 redirect_from: /culture/
+preload: hero-culture.svg
 ---
 
 {% include hero_banner.html
